--- a/front-end/webapp/src/app/modules/home/routes/settings/settings.component.html
+++ b/front-end/webapp/src/app/modules/home/routes/settings/settings.component.html
@@ -6,12 +6,13 @@
             <h2 class="mat-title" [translate]="'configuracion.logos.SUBTITLE_1'"></h2>
             <span mat-line class="mat-body" [translate]="'configuracion.logos.logotipo.DESCRIPTION'"></span>
             <span mat-line class="mat-body" [translate]="'configuracion.logos.logotipo.IMAGE_FORMAT'"></span>
+            <img [src]="BASE_PATH + SPONSOR_LOGO" alt="Sponsor Logo" height="128" width="512">
             <div fxLayout="row" fxLayoutGap="15px">
                 <app-img-uploader buttonLabel="configuracion.logos.UPLOAD_FILE" 
                                     [validations]="{acceptFormat: '.png', width: 512, height: 128}"
                                     icon="attach_file"
                                     (selectFiles)="selectFile($event, SPONSOR_LOGO)"></app-img-uploader>
-                <button mat-raised-button color="warn" translate="configuracion.logos.RESTORE" (click)="restore(SPONSOR_LOGO)"></button>
+                <button mat-raised-button color="warn" translate="configuracion.logos.RESTORE" (click)="restore(SPONSOR_LOGO, NAME_SPONSOR_LOGO)"></button>
             </div>
         </div>
 
@@ -19,12 +20,13 @@
             <h2 class="mat-title" [translate]="'configuracion.logos.SUBTITLE_2'"></h2>
             <span mat-line class="mat-body" [translate]="'configuracion.logos.icono_pagina.DESCRIPTION'"></span>
             <span mat-line class="mat-body" [translate]="'configuracion.logos.icono_pagina.IMAGE_FORMAT'"></span>
+            <img [src]="BASE_PATH + FAVICON" alt="Favicon" height="16" width="16">
             <div fxLayout="row" fxLayoutGap="15px">
                 <app-img-uploader buttonLabel="configuracion.logos.UPLOAD_FILE"
                                     [validations]="{acceptFormat: '.ico', width: 16, height: 16}"
                                     icon="attach_file"
                                     (selectFiles)="selectFile($event, FAVICON)"></app-img-uploader>
-                <button mat-raised-button color="warn" translate="configuracion.logos.RESTORE" (click)="restore(FAVICON)"></button>
+                <button mat-raised-button color="warn" translate="configuracion.logos.RESTORE" (click)="restore(FAVICON, NAME_FAVICON)"></button>
             </div>
         </div>
 
@@ -32,76 +34,84 @@
             <h2 class="mat-title" [translate]="'configuracion.logos.SUBTITLE_3'"></h2>
             <span mat-line class="mat-body" [translate]="'configuracion.logos.icono_escritorio.DESCRIPTION'"></span>
 
-            <span mat-line class="mat-body" [translate]="'configuracion.logos.icono_escritorio.IMAGE_FORMAT_72'"></span>
+            <span mat-line class="mat-body-strong" [translate]="'configuracion.logos.icono_escritorio.IMAGE_FORMAT_72'"></span>
+            <img [src]="BASE_PATH + ICON_72" alt="Icon 72x72" height="72" width="72">
             <div fxLayout="row" fxLayoutGap="15px">
                 <app-img-uploader buttonLabel="configuracion.logos.UPLOAD_FILE" 
                                     [validations]="{acceptFormat: '.png', width: 72, height: 72}"
                                     icon="attach_file"
                                     (selectFiles)="selectFile($event, ICON_72)"></app-img-uploader>
-                <button mat-raised-button color="warn" translate="configuracion.logos.RESTORE" (click)="restore(ICON_72)"></button>
+                <button mat-raised-button color="warn" translate="configuracion.logos.RESTORE" (click)="restore(ICON_72, NAME_ICON_72)"></button>
             </div>
 
-            <span mat-line class="mat-body" [translate]="'configuracion.logos.icono_escritorio.IMAGE_FORMAT_96'"></span>
+            <span mat-line class="mat-body-strong" [translate]="'configuracion.logos.icono_escritorio.IMAGE_FORMAT_96'"></span>
+            <img [src]="BASE_PATH + ICON_96" alt="Icon 96x96" height="96" width="96">
             <div fxLayout="row" fxLayoutGap="15px">
                 <app-img-uploader buttonLabel="configuracion.logos.UPLOAD_FILE" 
                                     [validations]="{acceptFormat: '.png', width: 96, height: 96}"
                                     icon="attach_file"
                                     (selectFiles)="selectFile($event, ICON_96)"></app-img-uploader>
-                <button mat-raised-button color="warn" translate="configuracion.logos.RESTORE" (click)="restore(ICON_96)"></button>
+                <button mat-raised-button color="warn" translate="configuracion.logos.RESTORE" (click)="restore(ICON_96, NAME_ICON_96)"></button>
             </div>
 
-            <span mat-line class="mat-body" [translate]="'configuracion.logos.icono_escritorio.IMAGE_FORMAT_128'"></span>
+            <span mat-line class="mat-body-strong" [translate]="'configuracion.logos.icono_escritorio.IMAGE_FORMAT_128'"></span>
+            <img [src]="BASE_PATH + ICON_128" alt="Icon 128x128" height="128" width="128">
             <div fxLayout="row" fxLayoutGap="15px">
                 <app-img-uploader buttonLabel="configuracion.logos.UPLOAD_FILE" 
                                     [validations]="{acceptFormat: '.png', width: 128, height: 128}"
                                     icon="attach_file"
                                     (selectFiles)="selectFile($event, ICON_128)"></app-img-uploader>
-                <button mat-raised-button color="warn" translate="configuracion.logos.RESTORE" (click)="restore(ICON_128)"></button>
+                <button mat-raised-button color="warn" translate="configuracion.logos.RESTORE" (click)="restore(ICON_128, NAME_ICON_128)"></button>
             </div>
 
-            <span mat-line class="mat-body" [translate]="'configuracion.logos.icono_escritorio.IMAGE_FORMAT_144'"></span>
+            <span mat-line class="mat-body-strong" [translate]="'configuracion.logos.icono_escritorio.IMAGE_FORMAT_144'"></span>
+            <img [src]="BASE_PATH + ICON_144" alt="Icon 144x144" height="144" width="144">
             <div fxLayout="row" fxLayoutGap="15px">
                 <app-img-uploader buttonLabel="configuracion.logos.UPLOAD_FILE" 
                                     [validations]="{acceptFormat: '.png', width: 144, height: 144}"
                                     icon="attach_file"
                                     (selectFiles)="selectFile($event, ICON_144)"></app-img-uploader>
-                <button mat-raised-button color="warn" translate="configuracion.logos.RESTORE" (click)="restore(ICON_144)"></button>
+                <button mat-raised-button color="warn" translate="configuracion.logos.RESTORE" (click)="restore(ICON_144, NAME_ICON_144)"></button>
             </div>
 
-            <span mat-line class="mat-body" [translate]="'configuracion.logos.icono_escritorio.IMAGE_FORMAT_152'"></span>
+            <span mat-line class="mat-body-strong" [translate]="'configuracion.logos.icono_escritorio.IMAGE_FORMAT_152'"></span>
+            <img [src]="BASE_PATH + ICON_152" alt="Icon 152x152" height="152" width="152">
             <div fxLayout="row" fxLayoutGap="15px">
                 <app-img-uploader buttonLabel="configuracion.logos.UPLOAD_FILE" 
                                     [validations]="{acceptFormat: '.png', width: 152, height: 152}"
                                     icon="attach_file"
                                     (selectFiles)="selectFile($event, ICON_152)"></app-img-uploader>
-                <button mat-raised-button color="warn" translate="configuracion.logos.RESTORE" (click)="restore(ICON_152)"></button>
+                <button mat-raised-button color="warn" translate="configuracion.logos.RESTORE" (click)="restore(ICON_152, NAME_ICON_152)"></button>
             </div>
 
-            <span mat-line class="mat-body" [translate]="'configuracion.logos.icono_escritorio.IMAGE_FORMAT_192'"></span>
+            <span mat-line class="mat-body-strong" [translate]="'configuracion.logos.icono_escritorio.IMAGE_FORMAT_192'"></span>
+            <img [src]="BASE_PATH + ICON_192" alt="Icon 192x192" height="192" width="192">
             <div fxLayout="row" fxLayoutGap="15px">
                 <app-img-uploader buttonLabel="configuracion.logos.UPLOAD_FILE" 
                                     [validations]="{acceptFormat: '.png', width: 192, height: 192}"
                                     icon="attach_file"
                                     (selectFiles)="selectFile($event, ICON_192)"></app-img-uploader>
-                <button mat-raised-button color="warn" translate="configuracion.logos.RESTORE" (click)="restore(ICON_192)"></button>
+                <button mat-raised-button color="warn" translate="configuracion.logos.RESTORE" (click)="restore(ICON_192, NAME_ICON_192)"></button>
             </div>
 
-            <span mat-line class="mat-body" [translate]="'configuracion.logos.icono_escritorio.IMAGE_FORMAT_384'"></span>
+            <span mat-line class="mat-body-strong" [translate]="'configuracion.logos.icono_escritorio.IMAGE_FORMAT_384'"></span>
+            <img [src]="BASE_PATH + ICON_384" alt="Icon 384x384" height="384" width="384">
             <div fxLayout="row" fxLayoutGap="15px">
                 <app-img-uploader buttonLabel="configuracion.logos.UPLOAD_FILE" 
                                     [validations]="{acceptFormat: '.png', width: 384, height: 384}"
                                     icon="attach_file"
                                     (selectFiles)="selectFile($event, ICON_384)"></app-img-uploader>
-                <button mat-raised-button color="warn" translate="configuracion.logos.RESTORE" (click)="restore(ICON_384)"></button>
+                <button mat-raised-button color="warn" translate="configuracion.logos.RESTORE" (click)="restore(ICON_384, NAME_ICON_384)"></button>
             </div>
 
-            <span mat-line class="mat-body" [translate]="'configuracion.logos.icono_escritorio.IMAGE_FORMAT_512'"></span>
+            <span mat-line class="mat-body-strong" [translate]="'configuracion.logos.icono_escritorio.IMAGE_FORMAT_512'"></span>
+            <img [src]="BASE_PATH + ICON_512" alt="Icon 512x512" height="512" width="512">
             <div fxLayout="row" fxLayoutGap="15px">
                 <app-img-uploader buttonLabel="configuracion.logos.UPLOAD_FILE" 
                                     [validations]="{acceptFormat: '.png', width: 512, height: 512}"
                                     icon="attach_file"
                                     (selectFiles)="selectFile($event, ICON_512)"></app-img-uploader>
-                <button mat-raised-button color="warn" translate="configuracion.logos.RESTORE" (click)="restore(ICON_512)"></button>
+                <button mat-raised-button color="warn" translate="configuracion.logos.RESTORE" (click)="restore(ICON_512, NAME_ICON_512)"></button>
             </div>
 
         </div>
