tg-3250 fix cacheo de browser al previsualizar iconos y logos

--- a/front-end/webapp/src/app/modules/home/routes/settings/settings.component.html
+++ b/front-end/webapp/src/app/modules/home/routes/settings/settings.component.html
@@ -6,7 +6,7 @@
             <h2 class="mat-title" [translate]="'configuracion.logos.SUBTITLE_1'"></h2>
             <span mat-line class="mat-body" [translate]="'configuracion.logos.logotipo.DESCRIPTION'"></span>
             <span mat-line class="mat-body" [translate]="'configuracion.logos.logotipo.IMAGE_FORMAT'"></span>
-            <img [src]="BASE_PATH + SPONSOR_LOGO" alt="Sponsor Logo" height="128" width="512">
+            <img [src]="BASE_PATH + SPONSOR_LOGO + timestamp" alt="Sponsor Logo" height="128" width="512">
             <div fxLayout="row" fxLayoutGap="15px">
                 <app-img-uploader buttonLabel="configuracion.logos.UPLOAD_FILE" 
                                     [validations]="{acceptFormat: '.png', width: 512, height: 128}"
@@ -20,7 +20,7 @@
             <h2 class="mat-title" [translate]="'configuracion.logos.SUBTITLE_2'"></h2>
             <span mat-line class="mat-body" [translate]="'configuracion.logos.icono_pagina.DESCRIPTION'"></span>
             <span mat-line class="mat-body" [translate]="'configuracion.logos.icono_pagina.IMAGE_FORMAT'"></span>
-            <img [src]="BASE_PATH + FAVICON" alt="Favicon" height="16" width="16">
+            <img [src]="BASE_PATH + FAVICON + timestamp" alt="Favicon" height="16" width="16">
             <div fxLayout="row" fxLayoutGap="15px">
                 <app-img-uploader buttonLabel="configuracion.logos.UPLOAD_FILE"
                                     [validations]="{acceptFormat: '.ico', width: 16, height: 16}"
@@ -35,7 +35,7 @@
             <span mat-line class="mat-body" [translate]="'configuracion.logos.icono_escritorio.DESCRIPTION'"></span>
 
             <span mat-line class="mat-body-strong" [translate]="'configuracion.logos.icono_escritorio.IMAGE_FORMAT_72'"></span>
-            <img [src]="BASE_PATH + ICON_72" alt="Icon 72x72" height="72" width="72">
+            <img [src]="BASE_PATH + ICON_72 + timestamp" alt="Icon 72x72" height="72" width="72">
             <div fxLayout="row" fxLayoutGap="15px">
                 <app-img-uploader buttonLabel="configuracion.logos.UPLOAD_FILE" 
                                     [validations]="{acceptFormat: '.png', width: 72, height: 72}"
@@ -45,7 +45,7 @@
             </div>
 
             <span mat-line class="mat-body-strong" [translate]="'configuracion.logos.icono_escritorio.IMAGE_FORMAT_96'"></span>
-            <img [src]="BASE_PATH + ICON_96" alt="Icon 96x96" height="96" width="96">
+            <img [src]="BASE_PATH + ICON_96 + timestamp" alt="Icon 96x96" height="96" width="96">
             <div fxLayout="row" fxLayoutGap="15px">
                 <app-img-uploader buttonLabel="configuracion.logos.UPLOAD_FILE" 
                                     [validations]="{acceptFormat: '.png', width: 96, height: 96}"
@@ -55,7 +55,7 @@
             </div>
 
             <span mat-line class="mat-body-strong" [translate]="'configuracion.logos.icono_escritorio.IMAGE_FORMAT_128'"></span>
-            <img [src]="BASE_PATH + ICON_128" alt="Icon 128x128" height="128" width="128">
+            <img [src]="BASE_PATH + ICON_128 + timestamp" alt="Icon 128x128" height="128" width="128">
             <div fxLayout="row" fxLayoutGap="15px">
                 <app-img-uploader buttonLabel="configuracion.logos.UPLOAD_FILE" 
                                     [validations]="{acceptFormat: '.png', width: 128, height: 128}"
@@ -65,7 +65,7 @@
             </div>
 
             <span mat-line class="mat-body-strong" [translate]="'configuracion.logos.icono_escritorio.IMAGE_FORMAT_144'"></span>
-            <img [src]="BASE_PATH + ICON_144" alt="Icon 144x144" height="144" width="144">
+            <img [src]="BASE_PATH + ICON_144 + timestamp" alt="Icon 144x144" height="144" width="144">
             <div fxLayout="row" fxLayoutGap="15px">
                 <app-img-uploader buttonLabel="configuracion.logos.UPLOAD_FILE" 
                                     [validations]="{acceptFormat: '.png', width: 144, height: 144}"
@@ -75,7 +75,7 @@
             </div>
 
             <span mat-line class="mat-body-strong" [translate]="'configuracion.logos.icono_escritorio.IMAGE_FORMAT_152'"></span>
-            <img [src]="BASE_PATH + ICON_152" alt="Icon 152x152" height="152" width="152">
+            <img [src]="BASE_PATH + ICON_152 + timestamp" alt="Icon 152x152" height="152" width="152">
             <div fxLayout="row" fxLayoutGap="15px">
                 <app-img-uploader buttonLabel="configuracion.logos.UPLOAD_FILE" 
                                     [validations]="{acceptFormat: '.png', width: 152, height: 152}"
@@ -85,7 +85,7 @@
             </div>
 
             <span mat-line class="mat-body-strong" [translate]="'configuracion.logos.icono_escritorio.IMAGE_FORMAT_192'"></span>
-            <img [src]="BASE_PATH + ICON_192" alt="Icon 192x192" height="192" width="192">
+            <img [src]="BASE_PATH + ICON_192 + timestamp" alt="Icon 192x192" height="192" width="192">
             <div fxLayout="row" fxLayoutGap="15px">
                 <app-img-uploader buttonLabel="configuracion.logos.UPLOAD_FILE" 
                                     [validations]="{acceptFormat: '.png', width: 192, height: 192}"
@@ -95,7 +95,7 @@
             </div>
 
             <span mat-line class="mat-body-strong" [translate]="'configuracion.logos.icono_escritorio.IMAGE_FORMAT_384'"></span>
-            <img [src]="BASE_PATH + ICON_384" alt="Icon 384x384" height="384" width="384">
+            <img [src]="BASE_PATH + ICON_384 + timestamp" alt="Icon 384x384" height="384" width="384">
             <div fxLayout="row" fxLayoutGap="15px">
                 <app-img-uploader buttonLabel="configuracion.logos.UPLOAD_FILE" 
                                     [validations]="{acceptFormat: '.png', width: 384, height: 384}"
@@ -105,7 +105,7 @@
             </div>
 
             <span mat-line class="mat-body-strong" [translate]="'configuracion.logos.icono_escritorio.IMAGE_FORMAT_512'"></span>
-            <img [src]="BASE_PATH + ICON_512" alt="Icon 512x512" height="512" width="512">
+            <img [src]="BASE_PATH + ICON_512 + timestamp" alt="Icon 512x512" height="512" width="512">
             <div fxLayout="row" fxLayoutGap="15px">
                 <app-img-uploader buttonLabel="configuracion.logos.UPLOAD_FILE" 
                                     [validations]="{acceptFormat: '.png', width: 512, height: 512}"
