tg-3227 Se oculta accion de nuevo triage para episodios de guardia con alta medica y se agrega validacion en BE

--- a/front-end/webapp/src/app/modules/historia-clinica/modules/guardia/routes/episode-details/episode-details.component.html
+++ b/front-end/webapp/src/app/modules/historia-clinica/modules/guardia/routes/episode-details/episode-details.component.html
@@ -149,7 +149,7 @@
 					</div>
 				</div>
 
-				<div fxLayout="row" fxLayoutAlign="flex-end center">
+				<div fxLayout="row" fxLayoutAlign="flex-end center" *ngIf="episodeState !== STATES.CON_ALTA_MEDICA">
 					<button id="nuevo-triage" mat-raised-button color="primary" (click)="newTriage()">
 						{{ 'guardia.episode.triage.NUEVO' | translate | uppercase }}
 					</button>
