tg-3284 creacion de estructura de portal de paciente

--- a/front-end/webapp/src/app/modules/home/routes/instituciones/instituciones.component.html
+++ b/front-end/webapp/src/app/modules/home/routes/instituciones/instituciones.component.html
@@ -32,4 +32,17 @@
 			</mat-list-item>
 		</mat-action-list>
 	</mat-card>
+	<div class="space"></div>
+	<mat-card>
+		<mat-card-header>
+			<mat-card-title>Acceso como paciente</mat-card-title>
+		</mat-card-header>
+		<mat-action-list role="list">
+			<mat-list-item role="listitem" (click)="ingresarPortalPaciente()">
+				<div mat-subheader>
+					<span>Ingrese aquí para ver su historia clínica</span>
+				</div>
+			</mat-list-item>
+		</mat-action-list>
+	</mat-card>
 </app-content>
