--- a/front-end/apps/projects/hospital/src/app/modules/home/routes/settings/settings.component.html
+++ b/front-end/apps/projects/hospital/src/app/modules/home/routes/settings/settings.component.html
@@ -6,13 +6,13 @@
             <h2 class="mat-title" [translate]="'configuracion.logos.SUBTITLE_1'"></h2>
             <span mat-line class="mat-body" [translate]="'configuracion.logos.logotipo.DESCRIPTION'"></span>
             <span mat-line class="mat-body" [translate]="'configuracion.logos.logotipo.IMAGE_FORMAT'"></span>
-            <img [src]="BASE_PATH + SPONSOR_LOGO + timestamp" alt="Sponsor Logo" height="128" width="512">
+            <img [src]="BASE_PATH + sponsorLogo.path + timestamp" [alt]="sponsorLogo.name" [height]="sponsorLogo.height" [width]="sponsorLogo.width">
             <div fxLayout="row" fxLayoutGap="15px">
                 <app-img-uploader buttonLabel="configuracion.logos.UPLOAD_FILE" 
-                                    [validations]="{acceptFormat: '.png', width: 512, height: 128}"
+                                    [validations]="{acceptFormat: sponsorLogo.extension, width: sponsorLogo.width, height: sponsorLogo.height}"
                                     icon="attach_file"
-                                    (selectFiles)="selectFile($event, SPONSOR_LOGO)"></app-img-uploader>
-                <button mat-raised-button color="warn" translate="configuracion.logos.RESTORE" (click)="restore(SPONSOR_LOGO, NAME_SPONSOR_LOGO)"></button>
+                                    (selectFiles)="selectFile($event, sponsorLogo.path)"></app-img-uploader>
+                <button mat-raised-button color="warn" translate="configuracion.logos.RESTORE" (click)="restore(sponsorLogo.path, sponsorLogo.name)"></button>
             </div>
         </div>
 
@@ -20,13 +20,13 @@
             <h2 class="mat-title" [translate]="'configuracion.logos.SUBTITLE_2'"></h2>
             <span mat-line class="mat-body" [translate]="'configuracion.logos.icono_pagina.DESCRIPTION'"></span>
             <span mat-line class="mat-body" [translate]="'configuracion.logos.icono_pagina.IMAGE_FORMAT'"></span>
-            <img [src]="BASE_PATH + FAVICON + timestamp" alt="Favicon" height="16" width="16">
+            <img [src]="BASE_PATH + favicon.path + timestamp" [alt]="favicon.name" [height]="favicon.height" [width]="favicon.width">
             <div fxLayout="row" fxLayoutGap="15px">
                 <app-img-uploader buttonLabel="configuracion.logos.UPLOAD_FILE"
-                                    [validations]="{acceptFormat: '.ico', width: 16, height: 16}"
+                                    [validations]="{acceptFormat: favicon.extension, width: favicon.width, height: favicon.height}"
                                     icon="attach_file"
-                                    (selectFiles)="selectFile($event, FAVICON)"></app-img-uploader>
-                <button mat-raised-button color="warn" translate="configuracion.logos.RESTORE" (click)="restore(FAVICON, NAME_FAVICON)"></button>
+                                    (selectFiles)="selectFile($event, favicon.path)"></app-img-uploader>
+                <button mat-raised-button color="warn" translate="configuracion.logos.RESTORE" (click)="restore(favicon.path, favicon.name)"></button>
             </div>
         </div>
 
@@ -34,84 +34,16 @@
             <h2 class="mat-title" [translate]="'configuracion.logos.SUBTITLE_3'"></h2>
             <span mat-line class="mat-body" [translate]="'configuracion.logos.icono_escritorio.DESCRIPTION'"></span>
 
-            <span mat-line class="mat-body-strong" [translate]="'configuracion.logos.icono_escritorio.IMAGE_FORMAT_72'"></span>
-            <img [src]="BASE_PATH + ICON_72 + timestamp" alt="Icon 72x72" height="72" width="72">
-            <div fxLayout="row" fxLayoutGap="15px">
-                <app-img-uploader buttonLabel="configuracion.logos.UPLOAD_FILE" 
-                                    [validations]="{acceptFormat: '.png', width: 72, height: 72}"
-                                    icon="attach_file"
-                                    (selectFiles)="selectFile($event, ICON_72)"></app-img-uploader>
-                <button mat-raised-button color="warn" translate="configuracion.logos.RESTORE" (click)="restore(ICON_72, NAME_ICON_72)"></button>
-            </div>
-
-            <span mat-line class="mat-body-strong" [translate]="'configuracion.logos.icono_escritorio.IMAGE_FORMAT_96'"></span>
-            <img [src]="BASE_PATH + ICON_96 + timestamp" alt="Icon 96x96" height="96" width="96">
-            <div fxLayout="row" fxLayoutGap="15px">
-                <app-img-uploader buttonLabel="configuracion.logos.UPLOAD_FILE" 
-                                    [validations]="{acceptFormat: '.png', width: 96, height: 96}"
-                                    icon="attach_file"
-                                    (selectFiles)="selectFile($event, ICON_96)"></app-img-uploader>
-                <button mat-raised-button color="warn" translate="configuracion.logos.RESTORE" (click)="restore(ICON_96, NAME_ICON_96)"></button>
-            </div>
-
-            <span mat-line class="mat-body-strong" [translate]="'configuracion.logos.icono_escritorio.IMAGE_FORMAT_128'"></span>
-            <img [src]="BASE_PATH + ICON_128 + timestamp" alt="Icon 128x128" height="128" width="128">
-            <div fxLayout="row" fxLayoutGap="15px">
-                <app-img-uploader buttonLabel="configuracion.logos.UPLOAD_FILE" 
-                                    [validations]="{acceptFormat: '.png', width: 128, height: 128}"
-                                    icon="attach_file"
-                                    (selectFiles)="selectFile($event, ICON_128)"></app-img-uploader>
-                <button mat-raised-button color="warn" translate="configuracion.logos.RESTORE" (click)="restore(ICON_128, NAME_ICON_128)"></button>
-            </div>
-
-            <span mat-line class="mat-body-strong" [translate]="'configuracion.logos.icono_escritorio.IMAGE_FORMAT_144'"></span>
-            <img [src]="BASE_PATH + ICON_144 + timestamp" alt="Icon 144x144" height="144" width="144">
-            <div fxLayout="row" fxLayoutGap="15px">
-                <app-img-uploader buttonLabel="configuracion.logos.UPLOAD_FILE" 
-                                    [validations]="{acceptFormat: '.png', width: 144, height: 144}"
-                                    icon="attach_file"
-                                    (selectFiles)="selectFile($event, ICON_144)"></app-img-uploader>
-                <button mat-raised-button color="warn" translate="configuracion.logos.RESTORE" (click)="restore(ICON_144, NAME_ICON_144)"></button>
-            </div>
-
-            <span mat-line class="mat-body-strong" [translate]="'configuracion.logos.icono_escritorio.IMAGE_FORMAT_152'"></span>
-            <img [src]="BASE_PATH + ICON_152 + timestamp" alt="Icon 152x152" height="152" width="152">
-            <div fxLayout="row" fxLayoutGap="15px">
-                <app-img-uploader buttonLabel="configuracion.logos.UPLOAD_FILE" 
-                                    [validations]="{acceptFormat: '.png', width: 152, height: 152}"
-                                    icon="attach_file"
-                                    (selectFiles)="selectFile($event, ICON_152)"></app-img-uploader>
-                <button mat-raised-button color="warn" translate="configuracion.logos.RESTORE" (click)="restore(ICON_152, NAME_ICON_152)"></button>
-            </div>
-
-            <span mat-line class="mat-body-strong" [translate]="'configuracion.logos.icono_escritorio.IMAGE_FORMAT_192'"></span>
-            <img [src]="BASE_PATH + ICON_192 + timestamp" alt="Icon 192x192" height="192" width="192">
-            <div fxLayout="row" fxLayoutGap="15px">
-                <app-img-uploader buttonLabel="configuracion.logos.UPLOAD_FILE" 
-                                    [validations]="{acceptFormat: '.png', width: 192, height: 192}"
-                                    icon="attach_file"
-                                    (selectFiles)="selectFile($event, ICON_192)"></app-img-uploader>
-                <button mat-raised-button color="warn" translate="configuracion.logos.RESTORE" (click)="restore(ICON_192, NAME_ICON_192)"></button>
-            </div>
-
-            <span mat-line class="mat-body-strong" [translate]="'configuracion.logos.icono_escritorio.IMAGE_FORMAT_384'"></span>
-            <img [src]="BASE_PATH + ICON_384 + timestamp" alt="Icon 384x384" height="384" width="384">
-            <div fxLayout="row" fxLayoutGap="15px">
-                <app-img-uploader buttonLabel="configuracion.logos.UPLOAD_FILE" 
-                                    [validations]="{acceptFormat: '.png', width: 384, height: 384}"
-                                    icon="attach_file"
-                                    (selectFiles)="selectFile($event, ICON_384)"></app-img-uploader>
-                <button mat-raised-button color="warn" translate="configuracion.logos.RESTORE" (click)="restore(ICON_384, NAME_ICON_384)"></button>
-            </div>
-
-            <span mat-line class="mat-body-strong" [translate]="'configuracion.logos.icono_escritorio.IMAGE_FORMAT_512'"></span>
-            <img [src]="BASE_PATH + ICON_512 + timestamp" alt="Icon 512x512" height="512" width="512">
-            <div fxLayout="row" fxLayoutGap="15px">
-                <app-img-uploader buttonLabel="configuracion.logos.UPLOAD_FILE" 
-                                    [validations]="{acceptFormat: '.png', width: 512, height: 512}"
-                                    icon="attach_file"
-                                    (selectFiles)="selectFile($event, ICON_512)"></app-img-uploader>
-                <button mat-raised-button color="warn" translate="configuracion.logos.RESTORE" (click)="restore(ICON_512, NAME_ICON_512)"></button>
+            <div *ngFor="let icon of icons" fxLayout="column" fxLayoutGap="10px">
+                <span mat-line class="mat-body-strong capitalize-first-letter">{{icon.name}}</span>
+                <img [src]="BASE_PATH + icon.path + timestamp" [alt]="icon.name" [height]="icon.height" [width]="icon.width">
+                <div fxLayout="row" fxLayoutGap="15px">
+                    <app-img-uploader buttonLabel="configuracion.logos.UPLOAD_FILE" 
+                                        [validations]="{acceptFormat: icon.extension, width: icon.width, height: icon.height}"
+                                        icon="attach_file"
+                                        (selectFiles)="selectFile($event, icon.path)"></app-img-uploader>
+                    <button mat-raised-button color="warn" translate="configuracion.logos.RESTORE" (click)="restore(icon.path, icon.name)"></button>
+                </div>
             </div>
 
         </div>
