tg-3281 [P2] Fix componente de nueva consulta tapa el footer

--- a/front-end/webapp/src/app/modules/presentation/components/footer/footer.component.scss
+++ b/front-end/webapp/src/app/modules/presentation/components/footer/footer.component.scss
@@ -2,7 +2,7 @@
 	background-color: #9c9fa3;
 	align-items: center;
 	text-align: center;
-	padding: 25px;
+	padding: 20px;
 }
 
 .footer-logos {
@@ -16,6 +16,8 @@
 .footer-version {
 	color: #f8f8f8;
 	min-width: max-content;
+	padding-bottom: 25px;
+	padding-top: 25px;
 	font-family: Roboto, "Helvetica Neue", sans-serif;
 }
 
