--- a/front-end/webapp/src/app/modules/historia-clinica/components/effective-time/effective-time.component.html
+++ b/front-end/webapp/src/app/modules/historia-clinica/components/effective-time/effective-time.component.html
@@ -1,6 +1,6 @@
 <div class="flex-row">
 	<mat-icon inline color="primary">access_time</mat-icon>
-	<span>{{ effectiveTime | date: 'dd/MM/yy - HH:mm' }}hs</span>
+	<span>{{ effectiveTime.toDate() | date: 'dd/MM/yy - HH:mm' }}hs</span>
 	<button type="button" color="primary" mat-icon-button (click)="openDialog()" matTooltip="Ajustar fecha y hora">
 		<mat-icon>settings</mat-icon>
 	</button>
