tg-3363 [P1] Fix error al ingresar a portal paciente con ROOT

--- a/front-end/webapp/src/app/modules/home/routes/instituciones/instituciones.component.html
+++ b/front-end/webapp/src/app/modules/home/routes/instituciones/instituciones.component.html
@@ -33,7 +33,7 @@
 		</mat-action-list>
 	</mat-card>
 	<div class="space"></div>
-	<mat-card>
+	<mat-card *ngIf="patientPortal">
 		<mat-card-header>
 			<mat-card-title>Acceso como paciente</mat-card-title>
 		</mat-card-header>
