--- a/front-end/webapp/src/app/modules/historia-clinica/modules/internacion/components/anamnesis-form/anamnesis-form.component.html
+++ b/front-end/webapp/src/app/modules/historia-clinica/modules/internacion/components/anamnesis-form/anamnesis-form.component.html
@@ -157,6 +157,11 @@
 									   matInput>
 									</mat-form-field>
 							<app-effective-time [effectiveTime]="form.value.vitalSigns.heartRate.effectiveTime" (update)="setVitalSignEffectiveTime($event, 'heartRate')"></app-effective-time>
+							<mat-error
+								*ngIf="hasError(this.form.controls.vitalSigns, 'min', 'heartRate.value')"
+								[translate]="'forms.MIN_ERROR'"
+								[translateParams]="{min: getError(this.form.controls.vitalSigns, 'min', 'heartRate.value').min}">
+							</mat-error>
 						</div>
 						<div class="field-container" formGroupName="respiratoryRate">
 							<mat-label [translate]="'internaciones.anamnesis.vital-signs.form.RESPIRATORY_RATE'"></mat-label>
@@ -169,6 +174,11 @@
 									   matInput>
 							</mat-form-field>
 							<app-effective-time [effectiveTime]="form.value.vitalSigns.respiratoryRate.effectiveTime" (update)="setVitalSignEffectiveTime($event, 'respiratoryRate')"></app-effective-time>
+							<mat-error
+								*ngIf="hasError(this.form.controls.vitalSigns, 'min', 'respiratoryRate.value')"
+								[translate]="'forms.MIN_ERROR'"
+								[translateParams]="{min: getError(this.form.controls.vitalSigns, 'min', 'respiratoryRate.value').min}">
+							</mat-error>
 						</div>
 					</div>
 
@@ -184,6 +194,11 @@
 									   matInput>
 							</mat-form-field>
 							<app-effective-time [effectiveTime]="form.value.vitalSigns.temperature.effectiveTime" (update)="setVitalSignEffectiveTime($event, 'temperature')"></app-effective-time>
+							<mat-error
+								*ngIf="hasError(this.form.controls.vitalSigns, 'min', 'temperature.value')"
+								[translate]="'forms.MIN_ERROR'"
+								[translateParams]="{min: getError(this.form.controls.vitalSigns, 'min', 'temperature.value').min}">
+							</mat-error>
 						</div>
 						<div class="field-container" formGroupName="bloodOxygenSaturation">
 							<mat-label
@@ -197,6 +212,11 @@
 									   matInput>
 							</mat-form-field>
 							<app-effective-time [effectiveTime]="form.value.vitalSigns.bloodOxygenSaturation.effectiveTime" (update)="setVitalSignEffectiveTime($event, 'bloodOxygenSaturation')"></app-effective-time>
+							<mat-error
+								*ngIf="hasError(this.form.controls.vitalSigns, 'min', 'bloodOxygenSaturation.value')"
+								[translate]="'forms.MIN_ERROR'"
+								[translateParams]="{min: getError(this.form.controls.vitalSigns, 'min', 'bloodOxygenSaturation.value').min}">
+							</mat-error>
 						</div>
 					</div>
 
@@ -213,6 +233,11 @@
 									   matInput>
 							</mat-form-field>
 							<app-effective-time [effectiveTime]="form.value.vitalSigns.systolicBloodPressure.effectiveTime" (update)="setVitalSignEffectiveTime($event, 'systolicBloodPressure')"></app-effective-time>
+							<mat-error
+								*ngIf="hasError(this.form.controls.vitalSigns, 'min', 'systolicBloodPressure.value')"
+								[translate]="'forms.MIN_ERROR'"
+								[translateParams]="{min: getError(this.form.controls.vitalSigns, 'min', 'systolicBloodPressure.value').min}">
+							</mat-error>
 						</div>
 						<div class="field-container" formGroupName="diastolicBloodPressure">
 							<mat-label
@@ -226,6 +251,11 @@
 									   matInput>
 							</mat-form-field>
 							<app-effective-time [effectiveTime]="form.value.vitalSigns.diastolicBloodPressure.effectiveTime" (update)="setVitalSignEffectiveTime($event, 'diastolicBloodPressure')"></app-effective-time>
+							<mat-error
+								*ngIf="hasError(this.form.controls.vitalSigns, 'min', 'diastolicBloodPressure.value')"
+								[translate]="'forms.MIN_ERROR'"
+								[translateParams]="{min: getError(this.form.controls.vitalSigns, 'min', 'diastolicBloodPressure.value').min}">
+							</mat-error>
 						</div>
 					</div>
 				</mat-card-content>
