--- a/front-end/webapp/src/app/modules/historia-clinica/modules/ambulatoria/routes/ambulatoria-paciente/ambulatoria-paciente.component.html
+++ b/front-end/webapp/src/app/modules/historia-clinica/modules/ambulatoria/routes/ambulatoria-paciente/ambulatoria-paciente.component.html
@@ -18,7 +18,7 @@
 		</app-patient-card>
 
 
-		<div class="flex-container">
+		<div class="flex-container" *ngIf="externalInstitutionsEnabled">
 				<div fxLayout="row" fxLayout.lt-md="column" fxLayoutAlign="center baseline" fxLayoutAlign.lt-md="baseline end">
 					<div fxFlex="55%"></div>
 
