--- a/front-end/webapp/src/app/modules/institucion/components/bed-detail/bed-detail.component.scss
+++ b/front-end/webapp/src/app/modules/institucion/components/bed-detail/bed-detail.component.scss
@@ -1,4 +1,4 @@
-@import 'src/assets/styles/variables.scss';
+@import '../../../../../assets/styles/variables.scss';
 
 section.page {
 	margin: 0px;
