--- a/front-end/webapp/src/app/modules/presentation/components/dock-popup/dock-popup.component.scss
+++ b/front-end/webapp/src/app/modules/presentation/components/dock-popup/dock-popup.component.scss
@@ -1,4 +1,4 @@
-@import 'src/assets/styles/variables.scss';
+@import '../../../../../assets/styles/variables.scss';
 
 .action-bar {
 	max-height: 10vh;
