--- a/front-end/webapp/src/app/modules/presentation/components/message-snackbar/message-snackbar.component.scss
+++ b/front-end/webapp/src/app/modules/presentation/components/message-snackbar/message-snackbar.component.scss
@@ -1,4 +1,4 @@
-@import 'src/assets/styles/variables.scss';
+@import '../../../../../assets/styles/variables.scss';
 
 
 ::ng-deep .mat-snack-bar-container {
